2017-12-03  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New minor version

        * inst/include/Rcpp/sugar/functions/is_na.h: Correct test for NA to work
        with new as well as old Date(time)Vectors

        * inst/unitTests/cpp/dates.cpp (has_na): Added tests
        * inst/unitTests/runit.Date.R (test.NA): Idem

2017-11-30  James J Balamuta  <balamut2@illinois.edu>

        * src/attributes.cpp: Fixed missing Rcpp namespace in export interface
        generation

2017-11-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

        * inst/include/Rcpp/exceptions/cpp11/exceptions.h: Ensure Rf_format gets
        a format string
        * inst/include/Rcpp/exceptions/cpp98/exceptions.h (Rcpp): Ditto

2017-11-18  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

        * vignettes/Rcpp-FAQ.Rmd: Use Rcpp::Rcpp.plugin.maker(), not ':::'

2017-11-17  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.12.14
        * inst/NEWS.Rd: Release 0.12.14
        * inst/bib/Rcpp.bib: Release 0.12.14
        * vignettes/Rcpp.bib: Release 0.12.14
        * inst/include/Rcpp/config.h: Release 0.12.14

2017-11-04  Dirk Eddelbuettel  <edd@debian.org>

        * vignettes/Rcpp-FAQ.Rmd: Add 'skip_final_break: true' toggle
        * vignettes/Rcpp-attributes.Rmd: Idem
        * vignettes/Rcpp-extending.Rmd: Idem
        * vignettes/Rcpp-modules.Rmd: Idem
        * vignettes/Rcpp-sugar.Rmd: Idem

2017-10-30  Dirk Eddelbuettel  <edd@debian.org>

        * inst/include/Rcpp.h: Unless RCPP_FORCE_OLD_DATE_DATETIME_VECTORS is
        defined, define RCPP_NEW_DATE_DATETIME_VECTORS to switch to new date and
        datetime vector as announced in release 0.12.8 one year ago

2017-10-03  Dirk Eddelbuettel  <edd@debian.org>

        * inst/include/Rcpp/iostream/Rstreambuf.h: White-space edits

2017-10-02  Kirill Müller  <krlmlr@mailbox.org>
